Always display scroll bars to prevent content repositioning when switching pages with/without scrollbars.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   @apply scroll-smooth
 }
 
+html {
+  overflow: scroll;
+}
+
 body {
   font-family: "Urbanist";
 }
